# music-events

./: README.md
music-events/: package-lock.json  package.json
src-tauri/libs/music_events_lib/: Cargo.toml
src-tauri/libs/music_events_lib/src/: lib.rs
src-tauri/libs/music_events_lib/src/db/: db_connection_pool.rs  general_controller.rs  mod.rs
src-tauri/libs/music_events_lib/src/model/: mod.rs  repository.rs
src-tauri/libs/music_events_lib/src/model/actor/: actor.rs  mod.rs
src-tauri/libs/music_events_lib/src/model/artist/: artist.rs  artist_repository_extension.rs  mod.rs
src-tauri/libs/music_events_lib/src/model/concert/: concert.rs  concert_repository_extension.rs  mod.rs
src-tauri/libs/music_events_lib/src/model/event/: event.rs  mod.rs
src-tauri/libs/music_events_lib/src/model/group/: group.rs  group_repository_extension.rs  mod.rs
src-tauri/libs/music_events_lib/src/model/group_artist/: group_artist.rs  mod.rs
src-tauri/libs/music_events_lib/src/model/participant/: mod.rs  participant.rs  participant_repository_extension.rs
src-tauri/libs/music_events_lib/src/model/person/: mod.rs  person.rs  person_repository_extension.rs
src-tauri/libs/music_events_lib/src/model/repertoire/: mod.rs  repertoire.rs
src-tauri/libs/music_events_lib/src/model/user/: mod.rs  user.rs  user_repository_extension.rs
src-tauri/libs/music_events_lib/src/model/user_person/: mod.rs  user_person.rs  user_person_repository_extension.rs
src-tauri/libs/music_events_lib/src/model/viewer/: mod.rs  viewer.rs
src-tauri/libs/music_events_lib/src/services/: mod.rs
(+285 files in other folders)
